--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-25 -->
+<!-- 2024-03-26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -22,15 +22,16 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#org7ebc4f2">1.1. 2024-03-20 14:58:37</a></li>
-<li><a href="#org30e98f4">1.2. 2024-03-19 10:49:19</a></li>
-<li><a href="#org2309290">1.3. 2024-03-13 08:31:23</a></li>
-<li><a href="#orgd40edb2">1.4. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.5. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.6. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.7. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.8. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.9. 2023-09-06 (任务)</a></li>
+<li><a href="#org2e51549">1.1. 2024-03-26 10:36:40</a></li>
+<li><a href="#org7ebc4f2">1.2. 2024-03-20 14:58:37</a></li>
+<li><a href="#org30e98f4">1.3. 2024-03-19 10:49:19</a></li>
+<li><a href="#org2309290">1.4. 2024-03-13 08:31:23</a></li>
+<li><a href="#orgd40edb2">1.5. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.6. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.7. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.8. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.9. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.10. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org7ac10f0">2. 练习题</a>
@@ -57,9 +58,66 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org7ebc4f2" class="outline-3">
-<h3 id="org7ebc4f2"><span class="section-number-3">1.1.</span> 2024-03-20 14:58:37</h3>
+<div id="outline-container-org2e51549" class="outline-3">
+<h3 id="org2e51549"><span class="section-number-3">1.1.</span> 2024-03-26 10:36:40</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+组件、控件、Control，在 C# 中，实际就是一个类的实例。
+</p>
+
+<p>
+代码示例:
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #005a5f;">Timer</span> <span style="color: #00538b;">timer</span>;
+<span class="linenr"> 2: </span><span style="color: #5317ac;">public</span> <span style="color: #721045;">Form1</span><span style="color: #000000;">()</span>
+<span class="linenr"> 3: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 4: </span>    <span style="color: #721045;">InitializeComponent</span><span style="color: #a8007f;">()</span>;
+<span class="linenr"> 5: </span>
+<span class="linenr"> 6: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">&#23450;&#26102;&#22120;</span>
+<span class="linenr"> 7: </span>    timer = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Timer</span><span style="color: #a8007f;">()</span>;
+<span class="linenr"> 8: </span>    timer.Interval = 20;
+<span class="linenr"> 9: </span>    timer.Tick += sdfksdjfksd;
+<span class="linenr">10: </span>    timer.<span style="color: #721045;">Start</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">11: </span><span style="color: #000000;">}</span>
+<span class="linenr">12: </span>
+<span class="linenr">13: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">sdfksdjfksd</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">14: </span><span style="color: #000000;">{</span>
+<span class="linenr">15: </span>    <span style="color: #005a5f;">var</span> <span style="color: #00538b;">loc</span> = button1.Location;
+<span class="linenr">16: </span>    button1.Location = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #a8007f;">(</span>
+<span class="linenr">17: </span>        loc.X + 5 &gt; 300 ? 0 : loc.X + 5,
+<span class="linenr">18: </span>        loc.Y + 1 &gt; 200 ? 0 : loc.Y + 1<span style="color: #a8007f;">)</span>;
+<span class="linenr">19: </span><span style="color: #000000;">}</span>
+<span class="linenr">20: </span>
+<span class="linenr">21: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">Form1_Load</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">22: </span><span style="color: #000000;">{</span>
+<span class="linenr">23: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#21487;&#20197;&#25163;&#21160;&#28155;&#21152;&#32452;&#20214;</span>
+<span class="linenr">24: </span>
+<span class="linenr">25: </span>    <span style="color: #005a5f;">var</span> <span style="color: #00538b;">button1</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Button</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">26: </span>    button1.Text = <span style="color: #2544bb;">"&#35874;&#35874;&#65292;&#23433;&#38745;"</span>;
+<span class="linenr">27: </span>    button1.Location = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #a8007f;">(</span>200, 300<span style="color: #a8007f;">)</span>;
+<span class="linenr">28: </span>
+<span class="linenr">29: </span>    <span style="color: #005a5f;">var</span> <span style="color: #00538b;">label</span> = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Label</span><span style="color: #a8007f;">()</span>;
+<span class="linenr">30: </span>    label.Text = <span style="color: #2544bb;">"&#23433;&#38745;&#65292;&#35874;&#35874;"</span>;
+<span class="linenr">31: </span>
+<span class="linenr">32: </span>    <span style="color: #5317ac;">this</span>.Controls.<span style="color: #721045;">Add</span><span style="color: #a8007f;">(</span>button1<span style="color: #a8007f;">)</span>;
+<span class="linenr">33: </span>    <span style="color: #5317ac;">this</span>.Controls.<span style="color: #721045;">Add</span><span style="color: #a8007f;">(</span>label<span style="color: #a8007f;">)</span>;
+<span class="linenr">34: </span>
+<span class="linenr">35: </span><span style="color: #000000;">}</span>
+<span class="linenr">36: </span>
+<span class="linenr">37: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">button2_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">38: </span><span style="color: #000000;">{</span>
+<span class="linenr">39: </span>    <span style="color: #505050;">// </span><span style="color: #505050;">&#21487;&#20197;&#25511;&#21046;&#23450;&#26102;&#22120;&#30340;&#24320;&#22987;&#19982;&#32467;&#26463;</span>
+<span class="linenr">40: </span>    timer.Enabled = <span style="color: #813e00;">!</span>timer.Enabled;
+<span class="linenr">41: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-org7ebc4f2" class="outline-3">
+<h3 id="org7ebc4f2"><span class="section-number-3">1.2.</span> 2024-03-20 14:58:37</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 一个小挑战。
 </p>
@@ -77,8 +135,8 @@
 </div>
 
 <div id="outline-container-org30e98f4" class="outline-3">
-<h3 id="org30e98f4"><span class="section-number-3">1.2.</span> 2024-03-19 10:49:19</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org30e98f4"><span class="section-number-3">1.3.</span> 2024-03-19 10:49:19</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 实际上，一个窗体就是一个 C# 的类型。对应三个文件：
 </p>
@@ -170,8 +228,8 @@
 </div>
 
 <div id="outline-container-org2309290" class="outline-3">
-<h3 id="org2309290"><span class="section-number-3">1.3.</span> 2024-03-13 08:31:23</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org2309290"><span class="section-number-3">1.4.</span> 2024-03-13 08:31:23</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 上课了
 </p>
@@ -285,8 +343,8 @@ GUI 程序 (Graphic User Interface):
 </div>
 
 <div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.4.</span> 2024-03-12 11:07:40</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="orgd40edb2"><span class="section-number-3">1.5.</span> 2024-03-12 11:07:40</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
 </p>
@@ -302,8 +360,8 @@ string abc = Console.ReadLine();
 </div>
 
 <div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.5.</span> 2024-01-16 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.6.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -315,8 +373,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.6.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="orgdd2b753"><span class="section-number-3">1.7.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-7">
 <table>
 
 
@@ -736,8 +794,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.7.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="orgad105e2"><span class="section-number-3">1.8.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-8">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -745,8 +803,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.8.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org64a4c8c"><span class="section-number-3">1.9.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -754,8 +812,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.9.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org16fdc68"><span class="section-number-3">1.10.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
@@ -1397,7 +1455,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-25</p>
+<p class="date">Created: 2024-03-26</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
