--- a/192/index.html
+++ b/192/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-26 -->
+<!-- 2024-03-27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>192</title>
@@ -22,16 +22,17 @@
 <ul>
 <li><a href="#orgcecfe29">1. 笔记</a>
 <ul>
-<li><a href="#org2e51549">1.1. 2024-03-26 10:36:40</a></li>
-<li><a href="#org7ebc4f2">1.2. 2024-03-20 14:58:37</a></li>
-<li><a href="#org30e98f4">1.3. 2024-03-19 10:49:19</a></li>
-<li><a href="#org2309290">1.4. 2024-03-13 08:31:23</a></li>
-<li><a href="#orgd40edb2">1.5. 2024-03-12 11:07:40</a></li>
-<li><a href="#orgbb73b3f">1.6. 2024-01-16 (寒假作业)</a></li>
-<li><a href="#orgdd2b753">1.7. 2024-01-16 (期末成绩)</a></li>
-<li><a href="#orgad105e2">1.8. 2023-12-26 (任务)</a></li>
-<li><a href="#org64a4c8c">1.9. 2023-10-31 (任务)</a></li>
-<li><a href="#org16fdc68">1.10. 2023-09-06 (任务)</a></li>
+<li><a href="#org30b5844">1.1. 2024-03-27 08:28:29</a></li>
+<li><a href="#org2e51549">1.2. 2024-03-26 10:36:40</a></li>
+<li><a href="#org7ebc4f2">1.3. 2024-03-20 14:58:37</a></li>
+<li><a href="#org30e98f4">1.4. 2024-03-19 10:49:19</a></li>
+<li><a href="#org2309290">1.5. 2024-03-13 08:31:23</a></li>
+<li><a href="#orgd40edb2">1.6. 2024-03-12 11:07:40</a></li>
+<li><a href="#orgbb73b3f">1.7. 2024-01-16 (寒假作业)</a></li>
+<li><a href="#orgdd2b753">1.8. 2024-01-16 (期末成绩)</a></li>
+<li><a href="#orgad105e2">1.9. 2023-12-26 (任务)</a></li>
+<li><a href="#org64a4c8c">1.10. 2023-10-31 (任务)</a></li>
+<li><a href="#org16fdc68">1.11. 2023-09-06 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#org7ac10f0">2. 练习题</a>
@@ -58,9 +59,20 @@
 <h2 id="orgcecfe29"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-org2e51549" class="outline-3">
-<h3 id="org2e51549"><span class="section-number-3">1.1.</span> 2024-03-26 10:36:40</h3>
+<div id="outline-container-org30b5844" class="outline-3">
+<h3 id="org30b5844"><span class="section-number-3">1.1.</span> 2024-03-27 08:28:29</h3>
 <div class="outline-text-3" id="text-1-1">
+<ul class="org-ul">
+<li>练习上次的内容，搞会</li>
+<li>按照课本第10页，完成登录项目的编写</li>
+<li>小小的挑战：跳动的心</li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org2e51549" class="outline-3">
+<h3 id="org2e51549"><span class="section-number-3">1.2.</span> 2024-03-26 10:36:40</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 组件、控件、Control，在 C# 中，实际就是一个类的实例。
 </p>
@@ -116,8 +128,8 @@
 </div>
 
 <div id="outline-container-org7ebc4f2" class="outline-3">
-<h3 id="org7ebc4f2"><span class="section-number-3">1.2.</span> 2024-03-20 14:58:37</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="org7ebc4f2"><span class="section-number-3">1.3.</span> 2024-03-20 14:58:37</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 一个小挑战。
 </p>
@@ -135,8 +147,8 @@
 </div>
 
 <div id="outline-container-org30e98f4" class="outline-3">
-<h3 id="org30e98f4"><span class="section-number-3">1.3.</span> 2024-03-19 10:49:19</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="org30e98f4"><span class="section-number-3">1.4.</span> 2024-03-19 10:49:19</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 实际上，一个窗体就是一个 C# 的类型。对应三个文件：
 </p>
@@ -228,8 +240,8 @@
 </div>
 
 <div id="outline-container-org2309290" class="outline-3">
-<h3 id="org2309290"><span class="section-number-3">1.4.</span> 2024-03-13 08:31:23</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org2309290"><span class="section-number-3">1.5.</span> 2024-03-13 08:31:23</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 上课了
 </p>
@@ -343,8 +355,8 @@ GUI 程序 (Graphic User Interface):
 </div>
 
 <div id="outline-container-orgd40edb2" class="outline-3">
-<h3 id="orgd40edb2"><span class="section-number-3">1.5.</span> 2024-03-12 11:07:40</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="orgd40edb2"><span class="section-number-3">1.6.</span> 2024-03-12 11:07:40</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 记住: <b>Console.ReadLine 方法，返回的是一个字符串类型!!!</b>
 </p>
@@ -360,8 +372,8 @@ string abc = Console.ReadLine();
 </div>
 
 <div id="outline-container-orgbb73b3f" class="outline-3">
-<h3 id="orgbb73b3f"><span class="section-number-3">1.6.</span> 2024-01-16 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="orgbb73b3f"><span class="section-number-3">1.7.</span> 2024-01-16 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 C/S架构编程，做完第一章所有的上机题:
 </p>
@@ -373,8 +385,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgdd2b753" class="outline-3">
-<h3 id="orgdd2b753"><span class="section-number-3">1.7.</span> 2024-01-16 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="orgdd2b753"><span class="section-number-3">1.8.</span> 2024-01-16 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-8">
 <table>
 
 
@@ -794,8 +806,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-orgad105e2" class="outline-3">
-<h3 id="orgad105e2"><span class="section-number-3">1.8.</span> 2023-12-26 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="orgad105e2"><span class="section-number-3">1.9.</span> 2023-12-26 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 使用 Winform 实现一个求取 BMI 的应用。要求设计合理，使用方便，美观大方
 </p>
@@ -803,8 +815,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org64a4c8c" class="outline-3">
-<h3 id="org64a4c8c"><span class="section-number-3">1.9.</span> 2023-10-31 (任务)</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org64a4c8c"><span class="section-number-3">1.10.</span> 2023-10-31 (任务)</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 创建类 PLC，描述设备的基本信息并添加基本控制
 </p>
@@ -812,8 +824,8 @@ C/S架构编程，做完第一章所有的上机题:
 </div>
 
 <div id="outline-container-org16fdc68" class="outline-3">
-<h3 id="org16fdc68"><span class="section-number-3">1.10.</span> 2023-09-06 (任务)</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="org16fdc68"><span class="section-number-3">1.11.</span> 2023-09-06 (任务)</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 1.hello.txt, 完成从创建文件、编译到运行的整个过程
 </p>
@@ -1455,7 +1467,7 @@ Console.<span style="color: #721045;">WriteLine</span><span style="color: #00000
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-26</p>
+<p class="date">Created: 2024-03-27</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
