--- a/190/index.html
+++ b/190/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2024-03-25 -->
+<!-- 2024-03-27 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>190</title>
@@ -22,16 +22,17 @@
 <ul>
 <li><a href="#org14957c5">1. 笔记</a>
 <ul>
-<li><a href="#orge5308c9">1.1. 2024-03-25 14:58:22</a></li>
-<li><a href="#orgf1ae66e">1.2. 2024-03-18 09:55:03</a></li>
-<li><a href="#orgb435766">1.3. 2024-03-13 11:01:46</a></li>
-<li><a href="#org8cbbc25">1.4. 2024-03-11 14:52:05</a></li>
-<li><a href="#org484b6e1">1.5. 2024-03-11 08:30:00</a></li>
-<li><a href="#org8452469">1.6. 2024-01-15 (寒假作业)</a></li>
-<li><a href="#org82189a0">1.7. 2024-01-15 (期末成绩)</a></li>
-<li><a href="#org9e9b6ae">1.8. 2023-12-28 (任务)</a></li>
-<li><a href="#org0a2cf87">1.9. 2023-10-30 (任务)</a></li>
-<li><a href="#orgf5f6210">1.10. 2023-09-07 (任务)</a></li>
+<li><a href="#orga282cb6">1.1. 2024-03-27 10:33:05</a></li>
+<li><a href="#orge5308c9">1.2. 2024-03-25 14:58:22</a></li>
+<li><a href="#orgf1ae66e">1.3. 2024-03-18 09:55:03</a></li>
+<li><a href="#orgb435766">1.4. 2024-03-13 11:01:46</a></li>
+<li><a href="#org8cbbc25">1.5. 2024-03-11 14:52:05</a></li>
+<li><a href="#org484b6e1">1.6. 2024-03-11 08:30:00</a></li>
+<li><a href="#org8452469">1.7. 2024-01-15 (寒假作业)</a></li>
+<li><a href="#org82189a0">1.8. 2024-01-15 (期末成绩)</a></li>
+<li><a href="#org9e9b6ae">1.9. 2023-12-28 (任务)</a></li>
+<li><a href="#org0a2cf87">1.10. 2023-10-30 (任务)</a></li>
+<li><a href="#orgf5f6210">1.11. 2023-09-07 (任务)</a></li>
 </ul>
 </li>
 <li><a href="#orga1a6079">2. 任务结果</a></li>
@@ -48,9 +49,82 @@
 <h2 id="org14957c5"><span class="section-number-2">1.</span> 笔记</h2>
 <div class="outline-text-2" id="text-1">
 </div>
-<div id="outline-container-orge5308c9" class="outline-3">
-<h3 id="orge5308c9"><span class="section-number-3">1.1.</span> 2024-03-25 14:58:22</h3>
+<div id="outline-container-orga282cb6" class="outline-3">
+<h3 id="orga282cb6"><span class="section-number-3">1.1.</span> 2024-03-27 10:33:05</h3>
 <div class="outline-text-3" id="text-1-1">
+<p>
+一个窗体中有很多图形元素，这些成为控件 (Control)。
+</p>
+
+<p>
+一个控件，实际上对应 C# 中的一个类型的实例:
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span style="color: #505050;">// </span><span style="color: #505050;">1. &#21019;&#24314;&#25511;&#20214;&#23454;&#20363;</span>
+<span style="color: #5317ac;">this</span>.button1 = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Button</span><span style="color: #000000;">()</span>;
+<span style="color: #5317ac;">this</span>.label1 = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Label</span><span style="color: #000000;">()</span>;
+
+<span style="color: #505050;">// </span><span style="color: #505050;">2. &#35774;&#32622;&#23646;&#24615;</span>
+<span style="color: #5317ac;">this</span>.button1.Name = <span style="color: #2544bb;">"button1"</span>;
+<span style="color: #5317ac;">this</span>.button1.Location = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span><span style="color: #000000;">(</span>356, 66<span style="color: #000000;">)</span>;
+<span style="color: #5317ac;">this</span>.button1.Size = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Size</span><span style="color: #000000;">(</span>75, 23<span style="color: #000000;">)</span>;
+<span style="color: #5317ac;">this</span>.button1.TabIndex = 0;
+<span style="color: #5317ac;">this</span>.button1.Text = <span style="color: #2544bb;">"button1"</span>;
+<span style="color: #5317ac;">this</span>.button1.UseVisualStyleBackColor = <span style="color: #0000c0;">true</span>;
+
+<span style="color: #505050;">// </span><span style="color: #505050;">3. &#28155;&#21152;&#21040;&#31383;&#20307;&#19978;</span>
+<span style="color: #5317ac;">this</span>.Controls.<span style="color: #721045;">Add</span><span style="color: #000000;">(</span><span style="color: #5317ac;">this</span>.label1<span style="color: #000000;">)</span>;
+<span style="color: #5317ac;">this</span>.Controls.<span style="color: #721045;">Add</span><span style="color: #000000;">(</span><span style="color: #5317ac;">this</span>.button1<span style="color: #000000;">)</span>;
+</pre>
+</div>
+
+<p>
+定时器，示例代码:
+</p>
+<div class="org-src-container">
+<pre class="src src-csx"><span class="linenr"> 1: </span><span style="color: #5317ac;">public</span> <span style="color: #721045;">Form1</span><span style="color: #000000;">()</span>
+<span class="linenr"> 2: </span><span style="color: #000000;">{</span>
+<span class="linenr"> 3: </span>    <span style="color: #721045;">InitializeComponent</span><span style="color: #a8007f;">()</span>;
+<span class="linenr"> 4: </span>
+<span class="linenr"> 5: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">for (int i = 0; i &lt; 100; i++)</span>
+<span class="linenr"> 6: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">{</span>
+<span class="linenr"> 7: </span>    <span style="color: #505050;">//    </span><span style="color: #505050;">var button = new Button();</span>
+<span class="linenr"> 8: </span>    <span style="color: #505050;">//    </span><span style="color: #505050;">button.Name = $"btn_{i}";</span>
+<span class="linenr"> 9: </span>    <span style="color: #505050;">//    </span><span style="color: #505050;">button.Text = $"hello {i}";</span>
+<span class="linenr">10: </span>    <span style="color: #505050;">//    </span><span style="color: #505050;">button.Location = new Point(</span>
+<span class="linenr">11: </span>    <span style="color: #505050;">//        </span><span style="color: #505050;">(i % 10) * 100,</span>
+<span class="linenr">12: </span>    <span style="color: #505050;">//        </span><span style="color: #505050;">(i / 10) * 30);</span>
+<span class="linenr">13: </span>    <span style="color: #505050;">//    </span><span style="color: #505050;">this.Controls.Add(button);</span>
+<span class="linenr">14: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">}</span>
+<span class="linenr">15: </span>
+<span class="linenr">16: </span>    timer1.Interval = 100;
+<span class="linenr">17: </span>    timer1.Tick += woyaozuoshen;
+<span class="linenr">18: </span>
+<span class="linenr">19: </span><span style="color: #000000;">}</span>
+<span class="linenr">20: </span>
+<span class="linenr">21: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">woyaozuoshen</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">22: </span><span style="color: #000000;">{</span>
+<span class="linenr">23: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">MessageBox.Show($"hello, &#29616;&#22312;&#26102;&#38388;: {DateTime.Now}");</span>
+<span class="linenr">24: </span>    button2.Location = <span style="color: #5317ac;">new</span> <span style="color: #005a5f;">Point</span>
+<span class="linenr">25: </span>        <span style="color: #a8007f;">(</span>
+<span class="linenr">26: </span>            button2.Location.X + 5,
+<span class="linenr">27: </span>            button2.Location.Y + 5
+<span class="linenr">28: </span>        <span style="color: #a8007f;">)</span>;
+<span class="linenr">29: </span><span style="color: #000000;">}</span>
+<span class="linenr">30: </span>
+<span class="linenr">31: </span><span style="color: #5317ac;">private</span> <span style="color: #005a5f;">void</span> <span style="color: #721045;">button1_Click</span><span style="color: #000000;">(</span><span style="color: #005a5f;">object</span> <span style="color: #00538b;">sender</span>, <span style="color: #005a5f;">EventArgs</span> <span style="color: #00538b;">e</span><span style="color: #000000;">)</span>
+<span class="linenr">32: </span><span style="color: #000000;">{</span>
+<span class="linenr">33: </span>    <span style="color: #505050;">//</span><span style="color: #505050;">timer1.Start();</span>
+<span class="linenr">34: </span>    timer1.Enabled = <span style="color: #813e00;">!</span>timer1.Enabled;
+<span class="linenr">35: </span><span style="color: #000000;">}</span>
+</pre>
+</div>
+</div>
+</div>
+
+<div id="outline-container-orge5308c9" class="outline-3">
+<h3 id="orge5308c9"><span class="section-number-3">1.2.</span> 2024-03-25 14:58:22</h3>
+<div class="outline-text-3" id="text-1-2">
 <p>
 课本第 5 页，事件。
 </p>
@@ -137,8 +211,8 @@
 </div>
 
 <div id="outline-container-orgf1ae66e" class="outline-3">
-<h3 id="orgf1ae66e"><span class="section-number-3">1.2.</span> 2024-03-18 09:55:03</h3>
-<div class="outline-text-3" id="text-1-2">
+<h3 id="orgf1ae66e"><span class="section-number-3">1.3.</span> 2024-03-18 09:55:03</h3>
+<div class="outline-text-3" id="text-1-3">
 <p>
 接下来进行练习:
 </p>
@@ -165,8 +239,8 @@
 </div>
 
 <div id="outline-container-orgb435766" class="outline-3">
-<h3 id="orgb435766"><span class="section-number-3">1.3.</span> 2024-03-13 11:01:46</h3>
-<div class="outline-text-3" id="text-1-3">
+<h3 id="orgb435766"><span class="section-number-3">1.4.</span> 2024-03-13 11:01:46</h3>
+<div class="outline-text-3" id="text-1-4">
 <p>
 为 BMI 计算器增加身体状况的判断和显示。
 </p>
@@ -211,8 +285,8 @@
 </div>
 
 <div id="outline-container-org8cbbc25" class="outline-3">
-<h3 id="org8cbbc25"><span class="section-number-3">1.4.</span> 2024-03-11 14:52:05</h3>
-<div class="outline-text-3" id="text-1-4">
+<h3 id="org8cbbc25"><span class="section-number-3">1.5.</span> 2024-03-11 14:52:05</h3>
+<div class="outline-text-3" id="text-1-5">
 <p>
 请大家保持安静，谢谢合作。
 </p>
@@ -254,7 +328,7 @@
 </p>
 
 
-<figure id="org34402d9">
+<figure id="orgce13829">
 <img src="img/oimg_20240311_150853.png" alt="oimg_20240311_150853.png">
 
 </figure>
@@ -278,8 +352,8 @@
 </div>
 
 <div id="outline-container-org484b6e1" class="outline-3">
-<h3 id="org484b6e1"><span class="section-number-3">1.5.</span> 2024-03-11 08:30:00</h3>
-<div class="outline-text-3" id="text-1-5">
+<h3 id="org484b6e1"><span class="section-number-3">1.6.</span> 2024-03-11 08:30:00</h3>
+<div class="outline-text-3" id="text-1-6">
 <p>
 Winform 项目，VS 界面:
 </p>
@@ -337,8 +411,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org8452469" class="outline-3">
-<h3 id="org8452469"><span class="section-number-3">1.6.</span> 2024-01-15 (寒假作业)</h3>
-<div class="outline-text-3" id="text-1-6">
+<h3 id="org8452469"><span class="section-number-3">1.7.</span> 2024-01-15 (寒假作业)</h3>
+<div class="outline-text-3" id="text-1-7">
 <p>
 做一个求取 BMI 的控制台应用:
 </p>
@@ -365,8 +439,8 @@ Winform 项目，VS 界面:
 
 
 <div id="outline-container-org82189a0" class="outline-3">
-<h3 id="org82189a0"><span class="section-number-3">1.7.</span> 2024-01-15 (期末成绩)</h3>
-<div class="outline-text-3" id="text-1-7">
+<h3 id="org82189a0"><span class="section-number-3">1.8.</span> 2024-01-15 (期末成绩)</h3>
+<div class="outline-text-3" id="text-1-8">
 <table>
 
 
@@ -840,8 +914,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org9e9b6ae" class="outline-3">
-<h3 id="org9e9b6ae"><span class="section-number-3">1.8.</span> 2023-12-28 (任务)</h3>
-<div class="outline-text-3" id="text-1-8">
+<h3 id="org9e9b6ae"><span class="section-number-3">1.9.</span> 2023-12-28 (任务)</h3>
+<div class="outline-text-3" id="text-1-9">
 <p>
 使用控制台实现点名的功能。
 </p>
@@ -853,8 +927,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-org0a2cf87" class="outline-3">
-<h3 id="org0a2cf87"><span class="section-number-3">1.9.</span> 2023-10-30 (任务)</h3>
-<div class="outline-text-3" id="text-1-9">
+<h3 id="org0a2cf87"><span class="section-number-3">1.10.</span> 2023-10-30 (任务)</h3>
+<div class="outline-text-3" id="text-1-10">
 <p>
 创建类 Device，描述设备的基本信息并添加基本控制
 </p>
@@ -862,8 +936,8 @@ Winform 项目，VS 界面:
 </div>
 
 <div id="outline-container-orgf5f6210" class="outline-3">
-<h3 id="orgf5f6210"><span class="section-number-3">1.10.</span> 2023-09-07 (任务)</h3>
-<div class="outline-text-3" id="text-1-10">
+<h3 id="orgf5f6210"><span class="section-number-3">1.11.</span> 2023-09-07 (任务)</h3>
+<div class="outline-text-3" id="text-1-11">
 <p>
 01-张三.txt, 创建源文件、编写代码、编译、运行
 </p>
@@ -1296,7 +1370,7 @@ Winform 项目，VS 界面:
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: 31415929</p>
-<p class="date">Created: 2024-03-25</p>
+<p class="date">Created: 2024-03-27</p>
 <p class="validation">Go ahead, never stop.</p>
 </div>
 </body>
